kotlin-ide/idea/testData/compiler/asJava/lightClasses/compilationErrors/ActualClass.java
public final class B /* p.B*/ {
  public  B();//  .ctor()

}